[package]
name = "decay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bybit = { git = "https://github.com/yufuquant/rust-bybit.git" }
rust_decimal = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"]}