[package]
name = "decay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.25.0"
rust_decimal_macros = "1.25.0"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"]}
reqwest = { version = "0.11", features = ["json"] }
config = "0.13.1"
async-trait = "0.1.56"
thiserror = "1.0.31"
hex = "0.4.3"
ring = "0.16.20"
anyhow = "1.0.58"
